[gd_scene load_steps=22 format=3 uid="uid://bar25hfq36y8b"]

[ext_resource type="Script" uid="uid://7rcgov4neusu" path="res://scripts/menu.gd" id="1_xdvgc"]
[ext_resource type="FontFile" uid="uid://xgto4s60tk2i" path="res://assets/m6x11.ttf" id="2_upctu"]
[ext_resource type="Texture2D" uid="uid://btp8xcv1gmrif" path="res://assets/crown.png" id="3_11y2r"]
[ext_resource type="Texture2D" uid="uid://56ybi6qbuvci" path="res://assets/Instructions.png" id="3_o0tnf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2af52"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1abgu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yt8fu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_upctu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7ycwl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b6cxs"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_aaywf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rtd1e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o0tnf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jmdev"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_11y2r"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6c8sk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4umqm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pp5m5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5p0sf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_el213"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_thu7x"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xdvgc")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0588235, 0.152941, 0.219608, 1)

[node name="Title" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -232.0
offset_top = -251.0
offset_right = 232.0
offset_bottom = -167.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("2_upctu")
theme_override_font_sizes/normal_font_size = 96
text = "Crown Trials"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="Crown" type="Sprite2D" parent="."]
position = Vector2(358, 65)
rotation = -0.261799
scale = Vector2(6, 6)
texture = ExtResource("3_11y2r")

[node name="Controls" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -449.0
offset_top = -44.0
offset_right = -267.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("2_upctu")
theme_override_font_sizes/normal_font_size = 56
text = "Controls"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="Instructions" type="Sprite2D" parent="."]
position = Vector2(216, 365)
scale = Vector2(4, 4)
texture = ExtResource("3_o0tnf")

[node name="Main" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 439.0
offset_top = 233.0
offset_right = 712.0
offset_bottom = 547.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 16

[node name="StartButton" type="Button" parent="Main"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_focus_color = Color(0.984314, 0.87451, 0.419608, 1)
theme_override_fonts/font = ExtResource("2_upctu")
theme_override_font_sizes/font_size = 56
theme_override_styles/focus = SubResource("StyleBoxEmpty_2af52")
theme_override_styles/hover = SubResource("StyleBoxEmpty_1abgu")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_yt8fu")
theme_override_styles/normal = SubResource("StyleBoxEmpty_upctu")
text = "start"

[node name="LevelsButton" type="Button" parent="Main"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_focus_color = Color(0.984314, 0.87451, 0.419608, 1)
theme_override_fonts/font = ExtResource("2_upctu")
theme_override_font_sizes/font_size = 56
theme_override_styles/focus = SubResource("StyleBoxEmpty_7ycwl")
theme_override_styles/hover = SubResource("StyleBoxEmpty_b6cxs")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_aaywf")
theme_override_styles/normal = SubResource("StyleBoxEmpty_upctu")
text = "levels"

[node name="SoundButton" type="Button" parent="Main"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_focus_color = Color(0.984314, 0.87451, 0.419608, 1)
theme_override_colors/font_pressed_color = Color(0.984314, 0.87451, 0.419608, 1)
theme_override_fonts/font = ExtResource("2_upctu")
theme_override_font_sizes/font_size = 56
theme_override_styles/focus = SubResource("StyleBoxEmpty_rtd1e")
theme_override_styles/hover = SubResource("StyleBoxEmpty_o0tnf")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_jmdev")
theme_override_styles/normal = SubResource("StyleBoxEmpty_11y2r")
toggle_mode = true
text = "toggle sound"

[node name="QuitButton" type="Button" parent="Main"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_focus_color = Color(0.984314, 0.87451, 0.419608, 1)
theme_override_fonts/font = ExtResource("2_upctu")
theme_override_font_sizes/font_size = 56
theme_override_styles/focus = SubResource("StyleBoxEmpty_rtd1e")
theme_override_styles/hover = SubResource("StyleBoxEmpty_o0tnf")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_jmdev")
theme_override_styles/normal = SubResource("StyleBoxEmpty_11y2r")
text = "quit"

[node name="Levels" type="Control" parent="."]
visible = false
layout_mode = 2
anchors_preset = 0
offset_left = 495.0
offset_top = 233.0
offset_right = 535.0
offset_bottom = 273.0

[node name="HBoxContainer" type="HBoxContainer" parent="Levels"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 142.0
offset_bottom = 294.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 64
alignment = 1

[node name="Level1VBoxContainer" type="VBoxContainer" parent="Levels/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 16

[node name="1aButton" type="Button" parent="Levels/HBoxContainer/Level1VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_focus_color = Color(0.984314, 0.87451, 0.419608, 1)
theme_override_fonts/font = ExtResource("2_upctu")
theme_override_font_sizes/font_size = 56
theme_override_styles/focus = SubResource("StyleBoxEmpty_6c8sk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_4umqm")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_pp5m5")
theme_override_styles/normal = SubResource("StyleBoxEmpty_upctu")
text = "1a"

[node name="1bButton" type="Button" parent="Levels/HBoxContainer/Level1VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_focus_color = Color(0.984314, 0.87451, 0.419608, 1)
theme_override_fonts/font = ExtResource("2_upctu")
theme_override_font_sizes/font_size = 56
theme_override_styles/focus = SubResource("StyleBoxEmpty_6c8sk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_4umqm")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_pp5m5")
theme_override_styles/normal = SubResource("StyleBoxEmpty_upctu")
text = "1b"

[node name="1cButton" type="Button" parent="Levels/HBoxContainer/Level1VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_focus_color = Color(0.984314, 0.87451, 0.419608, 1)
theme_override_fonts/font = ExtResource("2_upctu")
theme_override_font_sizes/font_size = 56
theme_override_styles/focus = SubResource("StyleBoxEmpty_6c8sk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_4umqm")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_pp5m5")
theme_override_styles/normal = SubResource("StyleBoxEmpty_upctu")
text = "1c"

[node name="1dButton" type="Button" parent="Levels/HBoxContainer/Level1VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_focus_color = Color(0.984314, 0.87451, 0.419608, 1)
theme_override_fonts/font = ExtResource("2_upctu")
theme_override_font_sizes/font_size = 56
theme_override_styles/focus = SubResource("StyleBoxEmpty_6c8sk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_4umqm")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_pp5m5")
theme_override_styles/normal = SubResource("StyleBoxEmpty_upctu")
text = "1d"

[node name="1eButton" type="Button" parent="Levels/HBoxContainer/Level1VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_focus_color = Color(0.984314, 0.87451, 0.419608, 1)
theme_override_fonts/font = ExtResource("2_upctu")
theme_override_font_sizes/font_size = 56
theme_override_styles/focus = SubResource("StyleBoxEmpty_6c8sk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_4umqm")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_pp5m5")
theme_override_styles/normal = SubResource("StyleBoxEmpty_upctu")
text = "1e"

[node name="Level2VBoxContainer" type="VBoxContainer" parent="Levels/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 16

[node name="2aButton" type="Button" parent="Levels/HBoxContainer/Level2VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_focus_color = Color(0.984314, 0.87451, 0.419608, 1)
theme_override_fonts/font = ExtResource("2_upctu")
theme_override_font_sizes/font_size = 56
theme_override_styles/focus = SubResource("StyleBoxEmpty_6c8sk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_4umqm")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_pp5m5")
theme_override_styles/normal = SubResource("StyleBoxEmpty_upctu")
text = "2a"

[node name="2bButton" type="Button" parent="Levels/HBoxContainer/Level2VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_focus_color = Color(0.984314, 0.87451, 0.419608, 1)
theme_override_fonts/font = ExtResource("2_upctu")
theme_override_font_sizes/font_size = 56
theme_override_styles/focus = SubResource("StyleBoxEmpty_6c8sk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_4umqm")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_pp5m5")
theme_override_styles/normal = SubResource("StyleBoxEmpty_upctu")
text = "2b"

[node name="2cButton" type="Button" parent="Levels/HBoxContainer/Level2VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_focus_color = Color(0.984314, 0.87451, 0.419608, 1)
theme_override_fonts/font = ExtResource("2_upctu")
theme_override_font_sizes/font_size = 56
theme_override_styles/focus = SubResource("StyleBoxEmpty_6c8sk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_4umqm")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_pp5m5")
theme_override_styles/normal = SubResource("StyleBoxEmpty_upctu")
text = "2c"

[node name="2dButton" type="Button" parent="Levels/HBoxContainer/Level2VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_focus_color = Color(0.984314, 0.87451, 0.419608, 1)
theme_override_fonts/font = ExtResource("2_upctu")
theme_override_font_sizes/font_size = 56
theme_override_styles/focus = SubResource("StyleBoxEmpty_6c8sk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_4umqm")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_pp5m5")
theme_override_styles/normal = SubResource("StyleBoxEmpty_upctu")
text = "2d"

[node name="2eButton" type="Button" parent="Levels/HBoxContainer/Level2VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_focus_color = Color(0.984314, 0.87451, 0.419608, 1)
theme_override_fonts/font = ExtResource("2_upctu")
theme_override_font_sizes/font_size = 56
theme_override_styles/focus = SubResource("StyleBoxEmpty_6c8sk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_4umqm")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_pp5m5")
theme_override_styles/normal = SubResource("StyleBoxEmpty_upctu")
text = "2e"

[node name="BackButton" type="Button" parent="Levels"]
layout_mode = 2
offset_left = 32.0
offset_top = 330.0
offset_right = 130.0
offset_bottom = 380.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_focus_color = Color(0.984314, 0.87451, 0.419608, 1)
theme_override_fonts/font = ExtResource("2_upctu")
theme_override_font_sizes/font_size = 56
theme_override_styles/focus = SubResource("StyleBoxEmpty_5p0sf")
theme_override_styles/hover = SubResource("StyleBoxEmpty_el213")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_thu7x")
theme_override_styles/normal = SubResource("StyleBoxEmpty_11y2r")
text = "back"

[connection signal="pressed" from="Main/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Main/LevelsButton" to="." method="_on_levels_button_pressed"]
[connection signal="toggled" from="Main/SoundButton" to="." method="_on_sound_button_toggled"]
[connection signal="pressed" from="Main/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Levels/HBoxContainer/Level1VBoxContainer/1aButton" to="." method="_on_1a_button_pressed"]
[connection signal="pressed" from="Levels/HBoxContainer/Level1VBoxContainer/1bButton" to="." method="_on_1b_button_pressed"]
[connection signal="pressed" from="Levels/HBoxContainer/Level1VBoxContainer/1cButton" to="." method="_on_1c_button_pressed"]
[connection signal="pressed" from="Levels/HBoxContainer/Level1VBoxContainer/1dButton" to="." method="_on_1d_button_pressed"]
[connection signal="pressed" from="Levels/HBoxContainer/Level1VBoxContainer/1eButton" to="." method="_on_1e_button_pressed"]
[connection signal="pressed" from="Levels/HBoxContainer/Level2VBoxContainer/2aButton" to="." method="_on_2a_button_pressed"]
[connection signal="pressed" from="Levels/HBoxContainer/Level2VBoxContainer/2bButton" to="." method="_on_2b_button_pressed"]
[connection signal="pressed" from="Levels/HBoxContainer/Level2VBoxContainer/2cButton" to="." method="_on_2c_button_pressed"]
[connection signal="pressed" from="Levels/HBoxContainer/Level2VBoxContainer/2dButton" to="." method="_on_2d_button_pressed"]
[connection signal="pressed" from="Levels/HBoxContainer/Level2VBoxContainer/2eButton" to="." method="_on_2e_button_pressed"]
[connection signal="pressed" from="Levels/BackButton" to="." method="_on_back_button_pressed"]
